labs/trainer/ctr-infra/src/main/k8s/jenkins/jenkins.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: ci
---
# Source: jenkins/templates/jenkins-agent-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-agent
  namespace: infra
  labels:
    app: jenkins
    chart: "jenkins-0.28.3"
    component: "jenkins-jenkins-master"
spec:
  ports:
    - port: 50000
      targetPort: 50000
      
      name: slavelistener
  selector:
    component: "jenkins-jenkins-master"
  type: ClusterIP

---
# Source: jenkins/templates/jenkins-master-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: infra
  labels:
    app: jenkins
    heritage: "Tiller"
    release: "jenkins"
    chart: "jenkins-0.28.3"
    component: "jenkins-jenkins-master"
spec:
  ports:
    - port: 8080
      name: http
      targetPort: 8080
      nodePort: 30079
      
  selector:
    component: "jenkins-jenkins-master"
  type: NodePort

---
# Source: jenkins/templates/jenkins-master-deployment.yaml

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: jenkins
  namespace: infra
  labels:
    app: jenkins
    heritage: "Tiller"
    release: "jenkins"
    chart: "jenkins-0.28.3"
    component: "jenkins-jenkins-master"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: "jenkins-jenkins-master"
  template:
    metadata:
      labels:
        app: jenkins
        heritage: "Tiller"
        release: "jenkins"
        chart: "jenkins-0.28.3"
        component: "jenkins-jenkins-master"
      annotations:
        checksum/config: 9887e39e9f5901745a29e1bc4fe2ccbfcfa3a2cec1195e3d88ae80c6d36bb0f5
    spec:
      securityContext:
        runAsUser: 0
      serviceAccountName: "default"
      containers:
        - name: jenkins
          image: "jenkins/jenkins:2.194-alpine"
          imagePullPolicy: "Always"
          args: [ "--argumentsRealm.passwd.$(ADMIN_USER)=$(ADMIN_PASSWORD)",  "--argumentsRealm.roles.$(ADMIN_USER)=admin"]
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 50000
              name: slavelistener
          livenessProbe:
            httpGet:
              path: "/login"
              port: http
            initialDelaySeconds: 90
            timeoutSeconds: 5
            failureThreshold: 12
          readinessProbe:
            httpGet:
              path: "/login"
              port: http
            initialDelaySeconds: 60
          # Resources configuration is a little hacky. This was to prevent breaking
          # changes, and should be cleanned up in the future once everybody had
          # enough time to migrate.
          resources:

            limits:
              cpu: 2000m
              memory: 2048Mi
            requests:
              cpu: 50m
              memory: 256Mi
            

          volumeMounts:
            -
              mountPath: /var/jenkins_home
              name: jenkins-home
              readOnly: false
            -
              mountPath: /var/jenkins_config
              name: jenkins-config
              readOnly: true
            -
              mountPath: /usr/share/jenkins/ref/plugins/
              name: plugin-dir
              readOnly: false
            -
              mountPath: /usr/share/jenkins/ref/secrets/
              name: secrets-dir
              readOnly: false
      volumes:
      - name: jenkins-config
        configMap:
          name: jenkins
      - name: plugin-dir
        emptyDir: {}
      - name: secrets-dir
        emptyDir: {}
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: jenkins

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: infra
  labels:
    app: jenkins
spec:
  rules:
  - host: jenkins.localtest.me
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: http
